--- a/pattern-proxy/pom.xml
+++ b/pattern-proxy/pom.xml
@@ -3,23 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.demo</groupId>
+        <artifactId>pattern</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.demo</groupId>
-    <artifactId>pattern</artifactId>
+    <artifactId>pattern-proxy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>pattern</name>
-    <description>Demo project for pattern</description>
-    <packaging>pom</packaging>
-    <modules>
-        <module>pattern-singleton</module>
-        <module>pattern-prototype</module>
-        <module>pattern-factory</module>
-        <module>pattern-proxy</module>
-    </modules>
+    <name>pattern-proxy</name>
+    <description>Demo project for pattern-proxy</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -35,12 +27,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
